# mini-music-player

./: CMakeLists.txt  Main.qml  README.md  asyncimageresponse.cpp  asyncimageresponse.h  barsvisualizer.cpp  barsvisualizer.h  localsongitem.cpp  localsongitem.h  main.cpp  neteasecloudmusicsongitem.cpp  neteasecloudmusicsongitem.h  res_for_cpp.qrc  songattachedpicprovider.cpp  songattachedpicprovider.h  songhelper.cpp  songhelper.h  songitem.cpp  songitem.h  visualizer.cpp  visualizer.h
QCloudMusicApi/include/: module.h
QCloudMusicApi/lib/: QCloudMusicApi.exp  QCloudMusicApi.lib  crypto-1_1-x64.exp  crypto-1_1-x64.lib  qrencode.exp  qrencode.lib  ssl-1_1-x64.exp  ssl-1_1-x64.lib
fftw-3.3.5-dll64/: libfftw3-3.exp  libfftw3-3.lib  libfftw3f-3.exp  libfftw3f-3.lib  libfftw3l-3.exp  libfftw3l-3.lib
